Updated HTML file

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             Feel free to reach out! </p>
         <div class="contacts-grid">
             <div class="contact-tile" id="link">
-                <a href="https://ca.linkedin.com/in/alexander-hang" target="_blank"><i class="fab fa-linkedin"
+                <a href="https://www.linkedin.com/in/alex-h95/" target="_blank"><i class="fab fa-linkedin"
                         style="font-size: 4em;"></i></a>
             </div>
             <div class="contact-tile" id="git">
