Updated HTML file

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
     </section>
     <section id="contact">
         <h2> <u>Contact Me!</u> </h2>
-        <p> Want to contact me? I have linked my LinkedIn profile, GitHub profile and my freeCodeCamp profile below.
-            Feel free to reach out! </p>
+        <p> Want to contact me? Let's chat and connect! I have linked my LinkedIn profile, GitHub profile and my freeCodeCamp profile below.
+            Feel free to reach out and let's talk about coding! </p>
         <div class="contacts-grid">
             <div class="contact-tile" id="link">
                 <a href="https://www.linkedin.com/in/alex-h95/" target="_blank"><i class="fab fa-linkedin"
